# capstone

./: .gitignore  ARCHITECTURE.md  README.md  SBOM.md  Team 6 - Final Report.docx
.github/codeql/: codeql-config.yml
.github/workflows/: pull_request.yaml
ESP-NOW/ESP-NOW/main/: CMakeLists.txt  (+1 more)
ESP-NOW/ESP_NOW_SENDER/: CMakeLists.txt  partitions.csv
LTSPICE/: CourseExample.asc  CourseExample.net  CourseExample.op.raw  CourseExample.raw
LTSPICE/FinalCurrentVoltageSense/: CurrentVoltageSense.asc
Project Specification/: ADC.html
Task1_ADC/: CMakeLists.txt
Task1_ADC/main/: oneshot_read_main.c
WiFi + HTTP Post/Dummy Server/: server.py
WiFi + HTTP Post/main/: CMakeLists.txt  hello_world_main.c  wifi_http_post.c
backend/: .env.example  main.py  mock.py  requirements.txt  serial_reader.py  setup.cfg  simulate_esp32-2.py  simulate_esp32-3.py  simulate_esp32.py
backend/app/: config.py  database.py
backend/tests/: conftest.py  test_alerts.py  test_competitions.py  test_data.py  test_ecu.py  test_event_participants.py  test_firmware.py  test_processing.py  test_scoring.py  test_teams.py  test_violations.py
compsys-team/: .gitignore  README.md
compsys-team/WiFi + HTTP Post/: CMakeLists.txt
frontend/: .env.example  eslint.config.js  package-lock.json  package.json  vite.config.js  vitest.config.js
frontend/src/: App.css  App.jsx  main.jsx
software-team/: .gitignore  .markdownlint.yaml  README.md  package-lock.json
software-team/backend/: setup.cfg  simulate_esp32-4.py  simulate_esp32.py
software-team/frontend/: index.html  vite.config.js
(+110 files in other folders)
